2009-08-16  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/lisp-tests.el (foo): 
	Test the Common Lisp-compatibile multiple value functionality.

2009-08-11  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/lisp-tests.el: 
	Test the new Common Lisp-compatible rounding functions available in
	C. 
	(generate-rounding-output): Provide a function useful for
	generating the data for the rounding functions tests. 

2009-08-10  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el: 
	Revert to the original language environment once we've tested all
	the others, preventing things like a Chinese terminal coding
	system being selected when you actually have a UTF-8 tty.

2009-07-13  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el: 
	Now that find-file on a nonexistent path gives a modified buffer,
	we want to set this kind of buffer to be non-modified here before
	killing it. 

2009-07-11  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el:
	Check for Richard Zidlicky's bug of
	http://mid.gmane.org/20090602194123.GA5163@linux-m68k.org; also
	check that supplying CODESYS to #'find-file is respected both for
	nonexistent files and zero-length existing files. 

2009-05-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.29 "garbanzo" is released.

2009-02-22  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el: 
	Use more realistic tests for the escape-quoted mule encoding
	checks; update a comment, change a Known-Bug-Expect-Failure to a
	normal test now that we've addressed an old bug. 

2009-02-18  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/query-coding-tests.el : Check that
	#'check-coding-systems-region returns null on success here, not t.

2009-02-17  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el (featurep): 
	Add a missing parenthesis here, thank you
	Stephen. Cf. http://mid.gmane.org/871vtzrxey.fsf@xemacs.org .

2009-02-10  Aidan Kehoe  <kehoea@parhasard.net>
